# Mojanpy

./: .gitignore  LICENSE  README.md  pyproject.toml
mojanpy/: __init__.py
mojanpy/http/: __init__.py  default.py  profile.py  routes.py
mojanpy/http/authentication/: yggdrasil.py
mojanpy/http/types/: default.py  profile.py  profiles.py
