[tool.poetry]
name = "Mojanpy"
version = "0.2.0"
description = "A simple in use Mojang API wrapper."
authors = ["Its-Fallen <git.fajzievm1@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Its-Fallen/Mojanpy"
repository = "https://github.com/Its-Fallen/Mojanpy"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
